--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,7 @@
-Username: <input type="text" name="username">
-Password: <input type="password" name="password">
-<button>Login</button>
+Username: <input type="text" name="username" [(ngModel)]="username">
+<br>
+Password: <input type="password" name="password" [(ngModel)]="password">
+<br>
+<button (click)=handleLogin()>Login</button>
+<br>
+<small *ngIf='invalidLogin'>{{errorMessage}}</small>
